@@ -27,6 +27,7 @@ version 1.7.1 ? (??/??/????):
   - lms-makeiptables: added public IP (SNAT) support (alec/daro)
   - partly changed naming convention: user -> customer (alec)
   - fixed customers and nodes searching when register_globals is on (alec)
+  - quick search made quick (kondi)
 
 version 1.7.0 Klorel (13/05/2005):
 
